# rust-crypto-microservices

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.bench  Dockerfile.lattice  Dockerfile.zk  README.md  docker-compose.yaml  readme.md  results.csv
bench_client/: Cargo.toml
bench_client/src/: main.rs
docker/: Dockerfile.bench
k8s/: bench-job.yaml  k8s-namespace.yaml  zk-service.yaml
lattice_service/: Cargo.toml
lattice_service/src/: .main.rs.swp  main.rs
scripts/: full-experiment-matrix.sh  run-experiment.sh
zk_service/: Cargo.toml
zk_service/src/: main.rs
