[package]
name = "zk_service"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-ff = "0.5"
ark-snark = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
axum = { version = "0.8.7", features = ["macros"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
